<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="birthday">Birthday :</string>
    <string name="age">Age :</string>
    <string name="email_address">Email Address :</string>
    <string name="mobile_number">Mobile Number :</string>
    <string name="address">Address :</string>
</resources>